add validation. add greyscale for maps. fix block height in block about

--- a/app/index.html
+++ b/app/index.html
@@ -233,10 +233,10 @@
           </ul>
           <div class="modal-input-button-wrapper">
             <div class="modal-input-wrapper">
-              <input type="tel" class="modal-input" placeholder="+7 (___) ___-__-__">
+              <input type="tel" class="modal-input js-input-modal" placeholder="+7 (___) ___-__-__">
             </div>
             <div class="button-wrapper">
-              <button class="button-general-styles modal-button">
+              <button class="button-general-styles modal-button js-btn-send-modal">
                 Записаться на приём
               </button>
             </div>
@@ -397,19 +397,34 @@
         </div>
         <div class="block-about-column-right">
           <div class="js-slider-for">
-            <img src="img/about1.jpg" alt="" class="block-about-large-item">
-            <img src="img/about2.jpg" alt="" class="block-about-large-item">
-            <img src="img/about3.jpg" alt="" class="block-about-large-item">
-            <img src="img/about4.jpg" alt="" class="block-about-large-item">
+            <div>
+              <div class="block-about-large-item-wrapper"><img src="img/about1.jpg" alt="" class="block-about-large-item"></div>
+            </div>
+            <div>
+              <div class="block-about-large-item-wrapper"><img src="img/about2.jpg" alt="" class="block-about-large-item"></div>
+            </div>
+            <div>
+              <div class="block-about-large-item-wrapper"><img src="img/about3.jpg" alt="" class="block-about-large-item"></div>
+            </div>
+            <div>
+              <div class="block-about-large-item-wrapper"><img src="img/about4.jpg" alt="" class="block-about-large-item"></div>
+            </div>
           </div>
 
           <div class="js-slider-nav block-about-img-bottom-row">
-            <img src="img/about2.jpg" alt="" class="block-about-small-item">
-            <img src="img/about3.jpg" alt="" class="block-about-small-item">
-            <img src="img/about4.jpg" alt="" class="block-about-small-item">
-            <img src="img/about1.jpg" alt="" class="block-about-small-item">
+            <div>
+              <div class="block-about-small-item-wrapper"><img src="img/about2.jpg" alt="" class="block-about-small-item"></div>
+            </div>
+            <div>
+              <div class="block-about-small-item-wrapper"><img src="img/about3.jpg" alt="" class="block-about-small-item"></div>
+            </div>
+            <div>
+              <div class="block-about-small-item-wrapper"><img src="img/about4.jpg" alt="" class="block-about-small-item"></div>
+            </div>
+            <div>
+              <div class="block-about-small-item-wrapper"><img src="img/about1.jpg" alt="" class="block-about-small-item"></div>
+            </div>
           </div>
-
         </div>
       </div>
     </div>
@@ -627,16 +642,16 @@
             <h3 class="title-general block-answer-title">Задайте <span class="other-text">вопрос</span> доктору онлайн</h3>
             <div class="block-answer-form">
               <div class="block-answer-input-wrapper">
-                <input class="block-answer-input" type="text" placeholder="Как вас зовут?">
+                <input class="block-answer-input js-input" type="text" placeholder="Как вас зовут?">
               </div>
               <div class="block-answer-input-wrapper">
-                <input class="block-answer-input" id="phone" type="tel" placeholder="Ваш телефон">
+                <input class="block-answer-input js-input" id="phone" type="tel" placeholder="Ваш телефон">
               </div>
               <div class="block-answer-input-wrapper">
-                <input class="block-answer-input" type="text" placeholder="Какой у вас вопрос?">
+                <input class="block-answer-input js-input" type="text" placeholder="Какой у вас вопрос?">
               </div>
               <div class="button-wrapper">
-                <button class="button-general-styles block-answer-button">
+                <button class="button-general-styles block-answer-button js-btn-send">
                   Задать вопрос
                 </button>
               </div>
